<resources>
    <string name="app_name">Madame Matchmaker</string>
    <string name="image_name">Picture of the bay at NCF</string>
    <string name="here">here</string>
    <string name="forgot_pass">Forgot password? Reset</string>
    <string name="new_user">Not a user? Register</string>
    <string name="login">Login</string>
    <string name="user_hint">Username</string>
    <string name="pass_hint">Password</string>

</resources>
