<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hfad.madamem.LoginActivity"
    android:background="@drawable/img_6559">


    <Button
        android:id="@+id/bRegisterHere"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="88dp"
        android:layout_height="55dp"
        android:fontFamily="cursive"
        android:text="@string/here"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="81dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="101dp"
        app:layout_constraintLeft_toLeftOf="@+id/bLogin"
        android:layout_marginLeft="81dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginTop="1dp"
        android:ems="10"
        android:fontFamily="cursive"
        android:hint="@string/pass_hint"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="@+id/etEmail"
        app:layout_constraintRight_toRightOf="@+id/etEmail"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="47dp"
        android:layout_marginEnd="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="42dp"
        android:ems="10"
        android:fontFamily="cursive"
        android:hint="@string/user_hint"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/tvForgotPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTitle"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/bLogin"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/bRegisterHere"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="33dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/tvRegisterHere"
        android:layout_marginLeft="33dp" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:fontFamily="cursive"
        android:text="@string/forgot_pass"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="26dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="223dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="224dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etTitle"
        android:layout_marginLeft="26dp" />

    <TextView
        android:id="@+id/tvRegisterHere"
        android:layout_width="155dp"
        android:layout_height="34dp"
        android:fontFamily="cursive"
        android:text="@string/new_user"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/bRegisterHere"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/etTitle"
        android:layout_width="193dp"
        android:layout_height="89dp"
        android:fontFamily="sans-serif-condensed"
        android:textAlignment="center"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/white"
        android:textSize="35sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="83dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bResetPassword"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="88dp"
        android:layout_height="58dp"
        android:layout_marginBottom="72dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="75dp"
        android:fontFamily="cursive"
        android:text="@string/here"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/bRegisterHere"
        app:layout_constraintLeft_toLeftOf="@+id/bLogin"
        app:layout_constraintTop_toTopOf="@+id/etEmail"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>